--- a/.pypirc
+++ b/.pypirc
@@ -1,14 +1,14 @@
 [distutils]
 index-servers =
     pypi
-    test
+    pypitest
 
 [pypi]
 repository=https://pypi.python.org/pypi
 username=openergy
 password=k7lm1s2GV
 
-[test]
+[pypitest]
 repository=https://testpypi.python.org/pypi
 username=openergy
 password=60aht8Cix3
