--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,2 @@
-recursive-include oplus/tests/resources *
-include README.md
+recursive-include oplus/idd/resources *
 include LICENSE.txt
-include requirements-conda.txt
-include requirements-pip.txt
-include setup.cfg
