work in progress: energyplus install

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -1,11 +1,3 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
-trigger:
-  - master
-
 strategy:
   matrix:
     LinuxPython36:
@@ -31,6 +23,28 @@ pool:
   vmImage: $(imageName)
 
 steps:
+  - bash: |
+      wget https://github.com/NREL/EnergyPlus/releases/download/v8.5.0/EnergyPlus-8.5.0-c87e61b44b-Linux-x86_64.sh
+      echo "y\r" | sudo bash /tmp/eplus.sh ./EnergyPlus-8.5.0-c87e61b44b-Linux-x86_64.sh
+      sudo rm ./EnergyPlus-8.5.0-c87e61b44b-Linux-x86_64.sh
+    displayName: 'Install EnergyPlus on Linux'
+    condition: eq( variables['Agent.OS'], 'Linux' )
+
+  - bash: |
+      wget https://github.com/NREL/EnergyPlus/releases/download/v8.5.0/EnergyPlus-8.5.0-c87e61b44b-Darwin-x86_64.dmg
+      sudo hdiutil attach ./EnergyPlus-8.5.0-c87e61b44b-Darwin-x86_64.dmg
+      sudo installer -pkg /Volumes/EnergyPlus-8.5.0-c87e61b44b-Darwin-x86_64/EnergyPlus-8.5.0-c87e61b44b-Darwin-x86_64.pkg -target /;
+      sudo rm ./EnergyPlus-8.5.0-c87e61b44b-Darwin-x86_64.dmg
+    displayName: 'Install EnergyPlus on MacOS'
+    condition: eq( variables['Agent.OS'], 'Darwin' )
+
+  - powershell: |
+      curl https://github.com/NREL/EnergyPlus/releases/download/v8.7.0/EnergyPlus-8.7.0-78a111df4a-Windows-x86_64.exe -OutFile:$(Agent.TempDirectory)\eplus.exe
+      & $(Agent.TempDirectory)\eplus.exe /S | Out-Null
+      energyplus
+    displayName: 'Install EnergyPlus on Windows'
+    condition: eq( variables['Agent.OS'], 'Windows_NT' )
+
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(python.version)'
