--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -99,7 +99,7 @@ jobs:
           pythonUploadServiceConnection: test-pypi
 
       # Use command line script to 'twine upload', use -r to pass the repository name and --config-file to pass the environment variable set by the authenticate task.
-      - script: python -m twine upload -r "pypitest" --config-file $(PYPIRC_PATH) dist/*.whl
+      - script: python -m twine upload -r "test-pypi" --config-file $(PYPIRC_PATH) dist/*.whl
         displayName: 'Publish to PyPi'
 
       - task: GitHubRelease@0
