debug azure-pipelines

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -90,7 +90,8 @@ jobs:
       - script: |
           python -m pip install --upgrade pip
           python -m pip install wheel twine
-          python setup.py bdist_wheel
+          python setup.py sdist bdist_wheel
+          python -m twine check dist/*
         displayName: 'Build using setup.py'
 
       - task: TwineAuthenticate@1
@@ -99,7 +100,7 @@ jobs:
           pythonUploadServiceConnection: test-pypi
 
       # Use command line script to 'twine upload', use -r to pass the repository name and --config-file to pass the environment variable set by the authenticate task.
-      - script: python -m twine upload -r "test-pypi" --config-file $(PYPIRC_PATH) dist/*.whl
+      - script: python -m twine upload -r "opyplus" --config-file $(PYPIRC_PATH) dist/*
         displayName: 'Publish to PyPi'
 
       - task: GitHubRelease@0
