--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -97,7 +97,7 @@ jobs:
       - task: TwineAuthenticate@1
         displayName: 'Twine Authenticate'
         inputs:
-          pythonUploadServiceConnection: test-pypi
+          pythonUploadServiceConnection: opyplus
 
       # Use command line script to 'twine upload', use -r to pass the repository name and --config-file to pass the environment variable set by the authenticate task.
       - script: python -m twine upload -r "opyplus" --config-file $(PYPIRC_PATH) dist/*
