--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -1,3 +1,11 @@
+trigger:
+  tags:
+    include:
+    - 'v*'
+  branches:
+    include:
+    - '*'
+
 jobs:
   - job: 'Test'
     strategy:
@@ -72,7 +80,7 @@ jobs:
     dependsOn: 'Test'
     pool:
       vmImage: 'ubuntu-latest'
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), startswith(variables['Build.SourceBranch'], 'refs/tags/v'))
     steps:
       - bash: |
           echo -e "$(cat opyplus/version.py)\nprint('##vso[task.setvariable variable=vtag]v'+str(version))" | python
@@ -107,8 +115,6 @@ jobs:
         inputs:
           gitHubConnection: 'zach-b'
           repositoryName: 'openergy/opyplus'
-          tagSource: manual
-          tag: $(vtag)
           releaseNotesSource: 'file'
           releaseNotesFile: 'release-notes.md'
         displayName: 'Create Github Release'
