--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -63,21 +63,24 @@ jobs:
         displayName: 'Install dependencies'
 
       - script: |
-          pip install flake8
-          python -m flake8
+          pip install flake8 flake8-docstrings
+          python -m flake8 opyplus/
         displayName: 'flake8'
 
       - script: |
           pip install pytest pytest-azurepipelines pytest-cov
-          pytest --cov=opyplus --cov-report=html  tests/
+          pytest --cov=opyplus --cov-report=html tests/
         displayName: 'pytest'
+        condition: succeeded() or failed()
 
       - script: |
+          pytest --doctest-modules opyplus/
           pip install sphinx autodoc
           cd docs
           make doctest
           make html
         displayName: 'docs'
+        condition: succeeded() or failed()
 
 
   - job: 'Publish'
