documentation tests are now only performed on linux

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -85,7 +85,7 @@ jobs:
           make doctest
           make html
         displayName: 'docs'
-        condition: always()
+        condition: eq(variables['Agent.OS'], 'Linux')
 
 
   - job: 'Publish'
