--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -115,7 +115,7 @@ jobs:
       - task: TwineAuthenticate@1
         displayName: 'Twine Authenticate'
         inputs:
-          pythonUploadServiceConnection: opyplus
+          pythonUploadServiceConnection: pypi-opyplus
 
       # Use command line script to 'twine upload', use -r to pass the repository name and --config-file to pass the environment variable set by the authenticate task.
       - script: python -m twine upload -r "opyplus" --config-file $(PYPIRC_PATH) dist/* --verbose
