--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,4 +3,5 @@ autodoc>=0.5.0,<0.6
 sphinx-rtd-theme>=0.4.3,<0.5
 m2r>=0.2.1,<0.3
 numpydoc>=0.9.2,<0.10.0
+docutils==0.17.1  # because of a bug on 0.18. Remove as soon as possible
 plotly  # used in some samples
