--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,4 @@ sphinx-rtd-theme>=0.4.3,<0.5
 m2r>=0.2.1,<0.3
 numpydoc>=0.9.2,<0.10.0
 plotly  # used in some samples
+mistune==0.8.4  # debug : https://github.com/Tribler/tribler/issues/6624
