--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,3 +5,4 @@ m2r>=0.2.1,<0.3
 numpydoc>=0.9.2,<0.10.0
 plotly  # used in some samples
 mistune==0.8.4  # debug : https://github.com/Tribler/tribler/issues/6624
+Jinja2<3.1  # debug: https://github.com/readthedocs/readthedocs.org/issues/9038
