fix azure pipeline to support python 3.6 on ubuntu 20.04

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         LinuxPython36:
-          imageName: 'ubuntu-latest'
+          imageName: 'ubuntu-20.04'
           python.version: '3.6'
         LinuxPython37:
           imageName: 'ubuntu-latest'
