updated tests to 22.1.0 Eplus

--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - CC_devops
+
+# todo [CC]: manage mac and windows os tests
 jobs:
   openergy:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@CC_international
