p: devops debug, initiating azure pipelines to github actions migration

--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -2,12 +2,12 @@ name: test-and-publish
 on:
   push:
     branches:
-      - CC_devops
+      - develop
 
-# todo [CC]: manage mac and windows os tests
+# todo [CC]: manage latest mac and windows os tests
 jobs:
   openergy:
-    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@CC_international
+    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@master
     with:
       install-eplus-2210: true
 
