--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -10,6 +10,7 @@ jobs:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@master
     with:
       install-eplus-2210: true
+      publish-to-pypi: true
 
     secrets:
       AZURE_CONDA_CHANNEL_KEY: ${{ secrets.AZURE_CONDA_CHANNEL_KEY }}
