--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -2,14 +2,15 @@ name: test-and-publish
 on:
   push:
     branches:
-      - develop
+      - cc_3_12
 
 # todo [CC]: manage latest mac and windows os tests
 jobs:
   openergy:
-    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@master
+    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@cc_opyplus
     with:
       install-eplus-2210: true
+      os-requirements: ["ubuntu-latest", "windows-latest"]
 
     secrets:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
