devops fix os different tests

--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - cc_3_12
 
+# todo: test different python versions
 jobs:
   openergy:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@cc_opyplus
