--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -12,7 +12,7 @@ jobs:
       install-eplus-2210: true
       os-requirements: "['ubuntu-latest', 'windows-latest']"
       python-conda-requirement: ">=3.6,<3.9"
-      python-versions: "['3.6','3.7', '3.8']"
+      python-versions: "['3.7', '3.8']"
 
     secrets:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
