--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -12,7 +12,7 @@ jobs:
       install-eplus-2210: true
       os-requirements: "['ubuntu-latest']"
       python-conda-requirement: ">=3.7,<3.13"
-      python-versions: "['3.8','3.9','3.10', '3.11', '3.12']"
+      python-versions: "['3.7', '3.8','3.9','3.10', '3.11', '3.12']"
 
     secrets:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
