--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -10,7 +10,7 @@ jobs:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@cc_opyplus
     with:
       install-eplus-2210: true
-      os-requirements: "['ubuntu-latest']"
+      os-requirements: "['ubuntu-latest', 'windows-latest]"
       python-conda-requirement: ">=3.7,<3.13"
       python-versions: "['3.7', '3.8','3.9','3.10', '3.11', '3.12']"
 
