--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -4,12 +4,14 @@ on:
     branches:
       - develop
 
-# todo [CC]: manage latest mac and windows os tests
 jobs:
   openergy:
-    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v03.yml@master
+    uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@master
     with:
       install-eplus-2210: true
+      os-requirements: "['ubuntu-latest']"
+      python-conda-requirement: ">=3.8,<3.13"
+      python-versions: "['3.10', '3.11', '3.12']"
 
     secrets:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
