--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pandas>=0.20.0,<2.0.0
-unidecode>=1.0.22,<2.0
-python-slugify>=3.0.2,<4.0
-cchardet>=2.1.4,<3.0
+pandas >=1.5.0,<3.0.0
+unidecode >=1.0.22,<2.0
+python-slugify >=3.0.2,<6.0
+charset-normalizer >=3.2.0, <4.0
