--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -9,6 +9,7 @@ jobs:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@master
     with:
       install-eplus-2210: true
+      make-doctest: true
       os-requirements: "['ubuntu-latest']"
       python-conda-requirement: ">=3.8,<3.13"
       python-versions: "['3.10', '3.11', '3.12']"
