--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,6 @@
-sphinx>=2.3.1,<3.0
-autodoc>=0.5.0,<0.6
-sphinx-rtd-theme>=0.4.3,<0.5
-m2r>=0.2.1,<0.3
-numpydoc>=0.9.2,<0.10.0
+sphinx >=6.0,<8.0
+sphinx-rtd-theme >=2.0,<3
+m2r >=0.2.1,<0.4
+numpydoc >=1.6.0,<2
 plotly  # used in some samples
-mistune==0.8.4  # debug : https://github.com/Tribler/tribler/issues/6624
-Jinja2<3.1  # debug: https://github.com/readthedocs/readthedocs.org/issues/9038
+jinja2 >=3.1.2,<4
