--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,6 +2,8 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
+# readthedocs build is automatically when PR on develop
+# todo: maybe on merge on master?
 # Required
 version: 2
 
