--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -8,11 +8,12 @@ jobs:
   openergy:
     uses: openergy/ogithub-actions/.github/workflows/opypackage-standard-v05.yml@master
     with:
+      publish-to-pypi: true
       install-eplus-2210: true
       make-doctest: true
       os-requirements: "['ubuntu-latest']"
       python-conda-requirement: ">=3.8,<3.13"
-      python-versions: "['3.10', '3.11', '3.12']"
+      python-test-versions: "['3.11', '3.12']"
 
     secrets:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
