--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -10,7 +10,7 @@ jobs:
     with:
       publish-to-pypi: true
       install-eplus-2210: true
-      make-doctest: true
+      check-documentation: true
       os-requirements: "['ubuntu-latest']"
       python-conda-requirement: ">=3.8,<3.13"
       python-test-versions: "['3.11', '3.12']"
