--- a/.github/workflows/opypackage-standard.yml
+++ b/.github/workflows/opypackage-standard.yml
@@ -19,4 +19,4 @@ jobs:
       ADMIN_GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
       AZURE_CONDA_CHANNEL_KEY: ${{ secrets.AZURE_CONDA_CHANNEL_KEY }}
       CONDA_CHANNEL_SYSADMIN_URL: ${{ secrets.CONDA_CHANNEL_SYSADMIN_URL }}
-      PYPI_OPENERGY_PASSWORD: ${{ secrets.PYPI_OPENERGY_PASSWORD }}
+      PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
